# PracticeLLVMPasses

./: CMakeLists.txt  README.md  constFoldingInput.ll  deadCodeElim.ll  example.ll  replaceDiv.ll  replaceMul.ll  tailCallOpt.ll
include/: ConstAddAnalysisPass.h  ConstantFoldingPass.h  DeadCodeElimination.h  ReplaceDivWithShift.h  ReplaceMulWithShift.h  TailCallOptimization.h
lib/: ConstAddAnalysisPass.cpp  ConstantFoldingPass.cpp  DeadCodeElimination.cpp  PassPlugin.cpp  ReplaceDivWithShift.cpp  ReplaceMulWithShift.cpp  TailCallOptimization.cpp
